--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,4 +1,6 @@
 .card {
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -11,6 +13,15 @@
     cursor: pointer;
 }
 
+.card * {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card img {
+    border: none;
+}
+
 .card h2 {
     color: inherit;
 }
@@ -18,6 +29,5 @@
 @media only screen and (max-width: 600px) {
     .card {
         width: 100%;
-        border: none;
     }
 }
